@startuml





/' Objects '/

class AlignmentRule {
	+AlignmentRule(double rule_strength)
	+calculateRuleForIndividual(std::vector<BasicBoid> &, const BasicBoid &) : Vector {query}
	+calculateRuleStrengthBetweenBoids(const BasicBoid &, const BasicBoid &) : Vector {query}
	+calculateScalingFactor(const BasicBoid &, double, double) : double {query}
}


class BasicBoid {
	+BasicBoid(double mass, Point starting_position, Vector starting_speed, Vector starting_acceleration)
	+BasicBoid(double mass, double starting_position_x, double starting_position_y, double speed_x, double speed_y, double acceleration_x, double acceleration_y)
	+~BasicBoid()
	-currentPosition : Point
	+getPosition() : Point& {query}
	-acceleration : Vector
	-speed : Vector
	+getAcceleration() : Vector& {query}
	+getSpeed() : Vector& {query}
	+operator==(const BasicBoid &) : bool {query}
	+getMass() : double {query}
	-mass : double
	+MyTurn(Vector, double) : void
	+boidPrint(std::ostream &) : void {query}
	+setAcceleration(double, double) : void
	+setAcceleration(const Vector &) : void
	+setSpeed(double, double) : void
	+setSpeed(const Vector &) : void
}


class ChasingRule {
	+ChasingRule(double rule_strength)
	+calculateRuleForIndividual(const BasicBoid &, const sf::Vector2i &) : Vector
	+getRuleStrength() : double {query}
	-ruleStrength : double
}


class CohesionRule {
	+CohesionRule(double rule_strength)
	+calculateRuleForIndividual(std::vector<BasicBoid> &, const BasicBoid &) : Vector {query}
	+calculateRuleStrengthBetweenBoids(const BasicBoid &, const BasicBoid &) : Vector {query}
	+calculateScalingFactor(const BasicBoid &, double, double) : double {query}
}


class Flock {
	+Flock(double flock_chasing_coefficient, double flock_repulsion, double flock_cohesion, double flock_alingment)
	-alingment : AlignmentRule
	+operator[](size_t) : BasicBoid&
	-chase : ChasingRule
	-cohesion : CohesionRule
	-separation : SeparationRule
	+isMemberOfFlock(const BasicBoid &) : bool {query}
	+flockSize() : size_t {query}
	-flockMembers : std::vector<BasicBoid>
	+insert(BasicBoid) : void
	+moveFlock(double, const sf::Vector2i &) : void
	+remove(const BasicBoid &) : void
}


class Point {
	+Point(double x, double y)
	+Vector2f() {query}
	+operatorVector() {query}
	+~Point()
	+operator+(const Point &) : Point {query}
	+operator+(const Vector &) : Point {query}
	+getPoint() : Point& {query}
	+operator-(const Point &) : Vector {query}
	+operator==(const Point &) : bool {query}
	+calculateDistance(const Point &) : double {query}
	+getX() : double {query}
	+getY() : double {query}
	-x : double
	-y : double
	+{static} Origo : static const Point
	+operator=(const Point &) : void
	+setPoint(double, double) : void
	+setPoint(Point) : void
	+setX(double) : void
	+setY(double) : void
}


abstract class Rule {
	+Rule(double rule_strength)
	+{abstract} calculateRuleForIndividual(std::vector<BasicBoid> &, const BasicBoid &) : Vector {query}
	+{abstract} calculateRuleStrengthBetweenBoids(const BasicBoid &, const BasicBoid &) : Vector {query}
	+{abstract} calculateScalingFactor(const BasicBoid &, double, double) : double {query}
	+getRuleStrength() : double {query}
	-ruleStrength : double
}


class SeparationRule {
	+SeparationRule(double rule_strength)
	+calculateRuleForIndividual(std::vector<BasicBoid> &, const BasicBoid &) : Vector {query}
	+calculateRuleStrengthBetweenBoids(const BasicBoid &, const BasicBoid &) : Vector {query}
	+calculateScalingFactor(const BasicBoid &, double, double) : double {query}
}


class Vector {
	+Vector(double x, double y)
	+Vector(const Vector& other)
	+Vector(const sf::Vector2i& other)
	+Vector2f() {query}
	+~Vector()
	+operator+(const Vector& other) : Vector {query}
	+operator-() : Vector {query}
	+operator-(const Vector& other) : Vector {query}
	+projectionOnto(const Vector& other) : Vector {query}
	+rotate(double angle) : Vector {query}
	+getVector() : Vector& {query}
	+isNull() : bool {query}
	+operator==(const Vector& other) : bool {query}
	+angleWith(const Vector& other) : double {query}
	+getLength() : double {query}
	+getX() : double {query}
	+getY() : double {query}
	+operator*(const Vector& other) : double {query}
	-x : double
	-y : double
	+{static} nullVector : static const Vector
	+normaliastion() : void
	+operator+=(const Vector& other) : void
	+operator=(const Vector& other) : void
	+setVector(double x, double y) : void
	+setVector(const Vector& other) : void
	+setX(double x) : void
	+setY(double y) : void
	+vectorPrint(std::ostream& os) : void {query}
}


class atexit_class {
	+atexit_class()
	+~atexit_class()
	+check() : int
	-{static} counter : static int
	-{static} err : static int
}





/' Inheritance relationships '/

.Rule <|-- .AlignmentRule


.Rule <|-- .CohesionRule


.Rule <|-- .SeparationRule





/' Aggregation relationships '/

.BasicBoid *-- .Point


.BasicBoid "2" *-- .Vector


.Flock *-- .AlignmentRule


.Flock *-- .BasicBoid


.Flock *-- .ChasingRule


.Flock *-- .CohesionRule


.Flock *-- .SeparationRule


.Point *-- .Point


.Vector *-- .Vector






/' Nested objects '/



@enduml
